improve validations and swagger docs
