# courses-backend/app/Http/Controllers/Api/CourseController.php
@@ -2,11 +2,13 @@
 
 namespace App\Http\Controllers\Api;
 
+use App\Enums\StudyLevel;
 use App\Http\Controllers\Controller;
 use App\Http\Resources\CourseResource;
 use App\Models\Course;
 use Carbon\Carbon;
 use Illuminate\Http\Request;
+use Illuminate\Validation\Rule;
 
 class CourseController extends Controller
 {
@@ -14,6 +16,7 @@ class CourseController extends Controller
      * @OA\Get(
      *     path="/api/v1/courses/",
      *     summary="Get list of courses",
+     *     tags={"Courses"},
      *     @OA\Response(
      *         response=200,
      *         description="OK"
@@ -22,14 +25,15 @@ class CourseController extends Controller
      */
     public function index()
     {
-        return CourseResource::collection(Course::with('primaryCoordinator')->get());
+        return CourseResource::collection(Course::with('primaryCoordinator')->orderBy('created_at', 'asc')->get());
     }
 
     /**
      * @OA\Post(
      *     path="/api/v1/courses/{id}",
      *     summary="Creates a course",
-     * @OA\RequestBody(
+    *      tags={"Courses"},
+     *     @OA\RequestBody(
      *         @OA\MediaType(
      *             mediaType="application/json",
      *             @OA\Schema(
@@ -72,10 +76,10 @@ class CourseController extends Controller
                 'name' => 'required|max:200',
                 'description' => 'nullable|string|max:2000',
                 'study_load' => 'required|min:0|max:30',
-                'level' => 'required|in:Bachelor,Master,Doctoral',
+                'level' => ['required', Rule::in(StudyLevel::cases())],
                 'start_date' => 'required|date|after:yesterday',
                 'course_length_in_days' => 'required|min:0|max:365',
-                'primary_coordinator_id' => 'required|string'
+                'primary_coordinator_id' => ['required', 'string', Rule::exists('users', 'id')->where('id', $request->primary_coordinator_id)]
             ]),
             'end_date' => $this->createEndDate($request)
         ]);
@@ -87,6 +91,7 @@ class CourseController extends Controller
      * @OA\Get(
      *     path="/api/v1/courses/{id}",
      *     summary="Get course by ID",
+     *     tags={"Courses"},
      *     @OA\Parameter(
      *         description="Course ID",
      *         in="path",
@@ -111,6 +116,7 @@ class CourseController extends Controller
      * @OA\Put(
      *     path="/api/v1/courses/{id}",
      *     summary="Updates a course",
+     *     tags={"Courses"},
      *     @OA\Parameter(
      *         description="Course ID",
      *         in="path",
@@ -132,10 +138,10 @@ class CourseController extends Controller
                 'name' => 'sometimes|max:200',
                 'description' => 'nullable|string|max:2000',
                 'study_load' => 'sometimes|min:0|max:30',
-                'level' => 'sometimes|in:Bachelor,Master,Doctoral',
+                'level' => ['required', Rule::in(StudyLevel::cases())],
                 'start_date' => 'sometimes|date',
                 'course_length_in_days' => 'sometimes|min:0|max:365',
-                'primary_coordinator_id' => 'sometimes|string'
+                'primary_coordinator_id' => ['sometimes', 'string', Rule::exists('users', 'id')->where('id', $request->primary_coordinator_id)]
             ]),
             'end_date' => $this->createEndDate($request)
         ]);
@@ -147,6 +153,7 @@ class CourseController extends Controller
      * @OA\Delete(
      *     path="/api/v1/courses/{id}",
      *     summary="Deletes a course",
+     *     tags={"Courses"},
      *     @OA\Parameter(
      *         description="Course ID",
      *         in="path",
