# courses-backend/routes/api.php
@@ -6,5 +6,5 @@ use App\Http\Controllers\Api\UserController;
 use Illuminate\Support\Facades\Route;
 
 Route::apiResource('courses', CourseController::class);
-Route::apiResource('courses.coordinators', CoordinatorController::class)->scoped()->except(['update']);
+Route::apiResource('courses.coordinators', CoordinatorController::class)->scoped()->except(['update', 'show', 'index']);
 Route::apiResource('users', UserController::class)->scoped()->only('index');
